--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-skeleton-build",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://oleg-irchishyn.github.io/react-app-skeleton",
+  "homepage": " https://oleg-irchishyn.github.io/React-Budget-App",
   "dependencies": {
     "@babel/core": "7.8.4",
     "@svgr/webpack": "4.3.3",
